--- a/PortFolion/PortFolion/EditComponent/EditWindow.xaml
+++ b/PortFolion/PortFolion/EditComponent/EditWindow.xaml
@@ -14,6 +14,7 @@
         xmlns:tree="clr-namespace:System.Windows.Controls;assembly=TreeListView"
         xmlns:mah="clr-namespace:MahApps.Metro.Controls;assembly=MahApps.Metro"
         xmlns:iconPacks="http://metro.mahapps.com/winfx/xaml/iconpacks"
+        xmlns:s="clr-namespace:System;assembly=mscorlib"
         x:Name="editWindow"
         mc:Ignorable="d" SaveWindowPosition="True"
         GlowBrush="{DynamicResource AccentColorBrush}" BorderThickness="1"
@@ -50,13 +51,18 @@
     </i:Interaction.Triggers>
     <mah:MetroWindow.Flyouts>
         <mah:FlyoutsControl>
+            <mah:FlyoutsControl.Resources>
+                <s:Boolean x:Key="True">True</s:Boolean>
+                <s:Boolean x:Key="False">False</s:Boolean>
+            </mah:FlyoutsControl.Resources>
             <mah:Flyout x:Name="HistoryFlyout" Header="履歴" 
                         Position="Right" AnimateOpacity="True"
                         CloseCommand="{Binding History.ClosedCmd}">
                 <v:HistoryView DataContext="{Binding History}"/>
             </mah:Flyout>
             <mah:Flyout x:Name="EditFlyout" Header="編集"
-                        Position="Top" AnimateOpacity="True">
+                        Position="Top" AnimateOpacity="True"
+                        CloseCommand="{Binding EditFlyout.}" CloseCommandParameter="{StaticResource False}">
                 
             </mah:Flyout>
         </mah:FlyoutsControl>
