iconPack周りの修正

--- a/PortFolion/PortFolion/EditComponent/EditWindow.xaml
+++ b/PortFolion/PortFolion/EditComponent/EditWindow.xaml
@@ -149,7 +149,9 @@
             </Grid.RowDefinitions>
             <StackPanel Grid.Row="0" Orientation="Horizontal" HorizontalAlignment="Center" Margin="0">
                 <TextBlock x:Name="Date" Text="{Binding CurrentDate,StringFormat=yyyy年 M月 d日 (ddd)}" FontSize="20" Margin="0,3" VerticalAlignment="Center" />
-                <Button Content="{iconPacks:PackIconMaterial Kind=DeleteForever, Width=15,Height=15}" ToolTip="削除" Margin="10,0,0,0" VerticalAlignment="Center">
+                <Button  ToolTip="削除" Margin="10,0,0,0" VerticalAlignment="Center">
+                    <!--Content="{iconPacks:PackIconMaterial Kind=DeleteForever, Width=15,Height=15}"-->
+                    <iconPacks:PackIconMaterial Kind="DeleteForever" Width="15" Height="15"/>
                     <i:Interaction.Triggers>
                         <i:EventTrigger EventName="Click">
                             <l:LivetCallMethodAction MethodTarget="{Binding}" MethodName="DeleteCurrentDate"/>
