--- a/PortFolion/PortFolion/EditComponent/HistoryView.xaml
+++ b/PortFolion/PortFolion/EditComponent/HistoryView.xaml
@@ -55,9 +55,11 @@
                                     <TextBlock Text="{Binding CurrentDate,StringFormat=yyyy/M/d}" VerticalAlignment="Center"/>
                                     <Button Width="22" Height="22" Margin="3,0"
                                             Style="{DynamicResource MahApps.Metro.Styles.MetroCircleButtonStyle}"
-                                            Content="{iconPacks:PackIconMaterial Kind=FileTree, Width=12,Height=12}"
-                                            Command="{Binding DisplayTreeCmd}" VerticalAlignment="Center"/>
-                                    <!-- Command="{StaticResource MyCommand}" CommandParameter="{Binding}"-->
+                                            
+                                            Command="{Binding DisplayTreeCmd}" VerticalAlignment="Center">
+                                        <iconPacks:PackIconMaterial Kind="FileTree" Width="12" Height="12"/>
+                                    </Button>
+                                    <!--Content="{iconPacks:PackIconMaterial Kind=FileTree, Width=12,Height=12}" Command="{StaticResource MyCommand}" CommandParameter="{Binding}"-->
                                 </StackPanel>
                             </DataTemplate>
                         </DataGridTemplateColumn.CellTemplate>
